fixed expanded/collapsed behavior

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ Media Query Breakpoints:
     --fontA: font-family: 'IM Fell Great Primer';
 
     --white: #f2f2f2;
-    --background-page: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    --background-page: radial-gradient(circle, rgba(255,255,255,.55) 25%, rgba(255,255,255,0) 75%);
+    /*--background-page: radial-gradient(circle, rgba(63,94,251,.5) 0%, rgba(252,70,107,.5) 100%);*/
     --background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     --youtube: darkred;
     --linkedin: darkblue;
@@ -20,7 +21,11 @@ Media Query Breakpoints:
 }
 
 html, body {
-    background: var(--background);  
+    background: var(--background) repeat;  
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden;
 }
 body {
@@ -119,24 +124,31 @@ a.social:hover {
     font-weight: 500;
     background-color: transparent;
     border: 0;
-    padding: inherit;
+    padding-top: auto;
+    padding-bottom: auto;
     display: inline-block;
-    margin: inherit;
+    margin: auto;
 }
 
 
 
-@media screen and (max-width: 400px)  {
+@media screen and (max-width: 600px)  {
     .title {
-        font-size: 2.6rem;
+        font-size: 3rem;
         float: none;
+    }
+    #navigation {
+        display: inline-block;
+        width: auto;
+        margin: auto;
+        padding: .1rem;
     }
     
 }
 
-@media screen and (min-width: 400px)  {
+@media screen and (min-width: 600px)  {
     .title {
-        font-size:  6vw;
+        font-size:  calc(clamp(2rem,6.5vw,5.5rem));
         float: left;
         align-items: center;
     }
@@ -146,10 +158,7 @@ a.social:hover {
     }
     
     #navigation {
-        display:inline-block;
-        width: auto;
-        margin: inherit;
-        padding: inherit;
+        margin: auto auto;
     }
 }
 
@@ -191,7 +200,7 @@ a.social:hover {
     color: #f2f2f2;
     text-align: center;
     padding: .15rem .25rem;
-    margin: auto
+    margin: auto;
     text-decoration: none;
     font-size: 28px;
     background-image: none;
@@ -215,15 +224,22 @@ a.social:hover {
 .tab:hover {
     color: #515151;
     text-shadow: 0.5px 0.5px black;
+    background: rgb(255,255,255);
     background: var(--background-page)
 
 }
 
 header {
-    padding: .5rem;
+    display: inline-flex;
+    align-items: center; /* vertical */
+    flex-flow: row wrap;  
+    justify-content: space-around;
+    padding: .2rem;
 }
 
 .page p {
+    margin: auto;
+    width: 90%;
     color: whitesmoke;
     font-family: 'IM Fell Great Primer';
     text-align: left;
@@ -232,7 +248,7 @@ header {
 .page {
     
     position: relative;
-    width: 60%;
+    width: 90%;
     /*height: 90%;*/
     /*margin-left: 25%;
     margin-right: 25%;*/
@@ -250,31 +266,43 @@ header {
   }
 
 *::-webkit-scrollbar {
-    width: 1em;
+    width: .5em;
     scrollbar-width: thin;
-    scrollbar-color: #6969dd #e0e0e0;
+    border-radius: 1rem;
+    scrollbar-color: red red;
 }
 
 *::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    height: 90%;
+    border-radius: 1rem;
+    
+    /*box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
   }
    
 *::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+    scrollbar-color: red red;
+    border-radius: 1rem; 
+    /*scrollbar-color: rgb(63,94,251);
+    scrollbar-color: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%) radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    */
+    /*outline: 1px solid rgba(100,100,100,.5);*/
+
+    /*scrollbar-color: rgba(63,94,251,1);*/
 }
 
 .page.expanded {
     transition: all 1s;
-    margin-top: 0%;
+    margin-top: 100%;
     opacity: 100%;
     display: inline-block;
+    margin: auto;
 }
 
 .page.collapsed {
     transition: all 1s;
     opacity: 0%;
     display: none;
+    margin: auto;
 }
 
 #all {
@@ -352,4 +380,14 @@ iframe {
     transition: color .25s;
  }
 
+
+.jittery span {
+    animation: jitter 200ms linear infinite;
+    display: inline-block;
+}
+
+@keyframes jitter { 
+    50%{transform:skewY(2deg) skewX(-2deg) scale(1.006);
+    } 
+}
  
